// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AskNetdataWidget component > snapshots > should match initial snapshot 1`] = `
<div>
  <style>
    
        /* Opacity removed from entrance animations to avoid fade */
  @keyframes slideUpInSmoothNoFade { 0% { transform: translateY(40px) scale(.96); filter:blur(1px);} 60% { transform: translateY(-2px) scale(1.01); filter:blur(0);} 100% { transform: translateY(0) scale(1); filter:blur(0);} }
        @keyframes riseInNoFade { 0% { transform: translateY(12px); } 100% { transform: translateY(0); } }
        @keyframes scanBackForth { 0% { transform: translateX(-100px);} 50% { transform: translateX(300px);} 100% { transform: translateX(-100px);} }
        @keyframes fadeOutDown { 0% { opacity:1; transform: translateY(0) scale(1);} 100% { opacity:0; transform: translateY(16px) scale(.97);} }
  /* Slide panel in from right and out to right */
  @keyframes slideInFromRight { 0% { transform: translateX(16px); opacity: 0; } 100% { transform: translateX(0); opacity: 1; } }
  @keyframes slideOutToRight { 0% { transform: translateX(0); opacity: 1; } 100% { transform: translateX(16px); opacity: 0; } }
  /* Slide panel up from bottom and down to bottom for mobile */
  @keyframes slideUpFromBottom { 0% { transform: translateY(100%); } 100% { transform: translateY(0); } }
  @keyframes slideDownToBottom { 0% { transform: translateY(0); } 100% { transform: translateY(100%); } }
  .asknet-overlay-panel::-webkit-scrollbar { display: none; }
  /* Smoothly transition content padding when panel opens/closes */
  .asknet-content-animate { transition: padding-right 320ms cubic-bezier(0.16,1,0.3,1), padding-bottom 320ms cubic-bezier(0.16,1,0.3,1); }
  /* Resizer: base + hover/drag states (uses CSS vars set on panel) */
  .asknet-resizer { transition: background 160ms ease, box-shadow 160ms ease, border-left 160ms ease; background: transparent; }
  /* Only highlight the visible resizer on direct hover; use solid accent color (no faded inward) */
  /* On hover/drag, the visible handle will be filled with the focus-ring color; disable extra outline to avoid double-color */
  .asknet-resizer:hover, .asknet-resizer.is-dragging { box-shadow: none; border-left: 1px solid transparent; }
  /* Search result card hover: subtle lift + accent border */
  .asknet-search-result { transition: box-shadow 180ms ease, transform 160ms ease, border-color 160ms ease; }
  .asknet-search-result:hover { transform: none; box-shadow: 0 0 0 2px var(--asknet-focus-ring); border-color: var(--asknet-resizer-border); }
      
  </style>
  <div
    style="position: sticky; top: calc(var(--ifm-navbar-height) + 8px); z-index: 1000; width: 100%; display: flex; justify-content: center; pointer-events: none;"
  >
    <div
      style="width: 100%; max-width: 800px; padding: 0px 20px; box-sizing: border-box; text-align: center;"
    >
      <div
        style="border: 1px solid rgb(229, 231, 235); background: rgba(255, 255, 255, 0.96); box-shadow: none; width: 400px; position: relative; display: flex; align-items: center; gap: 5px; pointer-events: auto; transition: box-shadow 220ms ease, background 220ms ease; min-height: 40px; border-radius: 999px; padding: 6px 8px 6px 20px; overflow: hidden;"
      >
        <div
          style="position: absolute; left: 26px; top: 50%; transform: translateY(-50%); right: 190px; display: flex; align-items: center; gap: 8px; flex-wrap: nowrap; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; opacity: 1; font-size: 16px; line-height: 1.3; color: rgba(0, 0, 0, 0.5); transition: opacity 260ms ease, color 300ms ease; pointer-events: none;"
        >
          Ask Netdata
          <span
            style="margin-left: 10px; font-size: 12px; font-weight: 600; letter-spacing: .5px; padding: 2px 6px; border-radius: 4px; display: inline-block; white-space: nowrap; min-width: 44px; text-align: center; background: rgba(0, 0, 0, 0.06); color: rgba(0, 0, 0, 0.6); line-height: 1; user-select: none;"
            title="Focus input"
          >
            Ctrl + K
          </span>
        </div>
        <textarea
          placeholder=""
          rows="1"
          style="flex: 1 1 0%; background: transparent; border: medium; outline: none; resize: none; font-size: 16px; font-family: inherit; line-height: 1.45; color: rgb(31, 41, 55); padding: 0px; max-height: 200px; overflow: hidden; height: 0px;"
        />
        <div
          aria-checked="false"
          role="switch"
          style="width: 98px; height: 41px; padding: 4px; box-sizing: border-box; border-radius: 999px; background: rgb(14, 182, 240); position: relative; cursor: pointer; transition: background 200ms ease; flex-shrink: 0; display: flex; align-items: center;"
          tabindex="0"
          title="Toggle search / chat"
        >
          <div
            style="position: absolute; top: 50%; left: auto; right: 10px; transform: translateY(-50%); font-size: 12px; font-weight: 600; letter-spacing: .4px; color: rgb(255, 255, 255); user-select: none; pointer-events: none;"
          >
            <span
              style="font-size: 11px; font-weight: 600; letter-spacing: .5px; padding: 3px 7px; border-radius: 6px; background: rgba(255, 255, 255, 0.25); color: rgb(255, 255, 255); line-height: 1; user-select: none; display: inline-block;"
            >
              Ctrl + /
            </span>
          </div>
          <div
            style="width: 32px; height: 32px; border-radius: 50%; background: rgb(255, 255, 255); position: absolute; top: 50%; left: 4px; transform: translateY(-50%); transition: left 200ms cubic-bezier(.2,.9,.2,1);"
          />
        </div>
        <button
          style="background: rgba(14, 182, 240, 0.28); color: rgb(255, 255, 255); border: medium; border-radius: 50%; width: 40px; height: 40px; cursor: pointer; display: flex; align-items: center; justify-content: center; box-shadow: none; transition: background 200ms ease, box-shadow 200ms ease;"
          type="button"
        >
          <svg
            fill="currentColor"
            height="16"
            viewBox="0 0 20 20"
            width="16"
          >
            <path
              d="M10.894 2.553a1 1 0 00-1.788 0l-7 14a1 1 0 001.169 1.409l5-1.429A1 1 0 009 15.571V11a1 1 0 112 0v4.571a1 1 0 00.725.962l5 1.428a1 1 0 001.17-1.408l-7-14z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <div
    style="position: fixed; top: 16px; bottom: auto; right: 0px; left: auto; height: calc(100% - 16px); z-index: 1200; display: none; pointer-events: none;"
  >
    <div
      style="display: flex; height: 100%; align-items: flex-start;"
    >
      <div
        style="width: auto; max-width: 1000px; height: 100%; padding: 0px; box-sizing: border-box; pointer-events: auto; display: flex; flex-direction: column; align-items: flex-end;"
      >
        <div
          class="asknet-overlay-panel"
          style="background: rgba(255, 255, 255, 0.96); border: 1px solid rgba(16, 24, 40, 0.04); border-radius: 0; padding: 10px; box-shadow: none; max-height: 100%; scrollbar-width: none; animation: slideInFromRight 320ms cubic-bezier(0.16,1,0.3,1) forwards; position: relative; display: flex; flex-direction: column; width: 320px; height: 100%; transition: none; --asknet-resizer-bg: #0eb6f0ff; --asknet-resizer-glow: #0eb6f0ff; --asknet-resizer-border: #0eb6f0ff; --asknet-glow-strong: rgba(14,182,240,0.32); --asknet-glow-soft: rgba(14,182,240,0.16); --asknet-focus-ring: rgba(14,182,240,0.35);"
        >
          <div
            aria-orientation="vertical"
            role="separator"
            style="position: absolute; left: -10px; top: 0px; bottom: 0px; width: 20px; cursor: ew-resize; display: flex; align-items: center; justify-content: center; z-index: 1300;"
          >
            <div
              class="asknet-resizer "
              style="width: 8px; height: 100%; display: block; box-sizing: border-box; border-radius: 0; background: transparent; border-left: 1px solid transparent; transition: width 120ms ease, background 120ms ease;"
            />
          </div>
          <div
            style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 24px;"
          >
            <div
              style="font-size: 15px; font-weight: 600;"
            />
            <div
              style="display: flex; gap: 12px;"
            >
              <button
                aria-label="Close overlay"
                style="background: transparent; border: medium; font-size: 18px; cursor: pointer; line-height: 1; padding: 4px 6px;"
              >
                ×
              </button>
            </div>
          </div>
          <div
            style="flex: 1 1 0%; overflow-y: auto; padding-right: 6px; padding-top: 8px;"
          >
            <div />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AskNetdataWidget component > snapshots > should match snapshot with custom props 1`] = `
<div>
  <style>
    
        /* Opacity removed from entrance animations to avoid fade */
  @keyframes slideUpInSmoothNoFade { 0% { transform: translateY(40px) scale(.96); filter:blur(1px);} 60% { transform: translateY(-2px) scale(1.01); filter:blur(0);} 100% { transform: translateY(0) scale(1); filter:blur(0);} }
        @keyframes riseInNoFade { 0% { transform: translateY(12px); } 100% { transform: translateY(0); } }
        @keyframes scanBackForth { 0% { transform: translateX(-100px);} 50% { transform: translateX(300px);} 100% { transform: translateX(-100px);} }
        @keyframes fadeOutDown { 0% { opacity:1; transform: translateY(0) scale(1);} 100% { opacity:0; transform: translateY(16px) scale(.97);} }
  /* Slide panel in from right and out to right */
  @keyframes slideInFromRight { 0% { transform: translateX(16px); opacity: 0; } 100% { transform: translateX(0); opacity: 1; } }
  @keyframes slideOutToRight { 0% { transform: translateX(0); opacity: 1; } 100% { transform: translateX(16px); opacity: 0; } }
  /* Slide panel up from bottom and down to bottom for mobile */
  @keyframes slideUpFromBottom { 0% { transform: translateY(100%); } 100% { transform: translateY(0); } }
  @keyframes slideDownToBottom { 0% { transform: translateY(0); } 100% { transform: translateY(100%); } }
  .asknet-overlay-panel::-webkit-scrollbar { display: none; }
  /* Smoothly transition content padding when panel opens/closes */
  .asknet-content-animate { transition: padding-right 320ms cubic-bezier(0.16,1,0.3,1), padding-bottom 320ms cubic-bezier(0.16,1,0.3,1); }
  /* Resizer: base + hover/drag states (uses CSS vars set on panel) */
  .asknet-resizer { transition: background 160ms ease, box-shadow 160ms ease, border-left 160ms ease; background: transparent; }
  /* Only highlight the visible resizer on direct hover; use solid accent color (no faded inward) */
  /* On hover/drag, the visible handle will be filled with the focus-ring color; disable extra outline to avoid double-color */
  .asknet-resizer:hover, .asknet-resizer.is-dragging { box-shadow: none; border-left: 1px solid transparent; }
  /* Search result card hover: subtle lift + accent border */
  .asknet-search-result { transition: box-shadow 180ms ease, transform 160ms ease, border-color 160ms ease; }
  .asknet-search-result:hover { transform: none; box-shadow: 0 0 0 2px var(--asknet-focus-ring); border-color: var(--asknet-resizer-border); }
      
  </style>
  <div
    style="position: sticky; top: calc(var(--ifm-navbar-height) + 8px); z-index: 1000; width: 100%; display: flex; justify-content: center; pointer-events: none;"
  >
    <div
      style="width: 100%; max-width: 800px; padding: 0px 20px; box-sizing: border-box; text-align: center;"
    >
      <div
        style="border: 1px solid rgb(229, 231, 235); background: rgba(255, 255, 255, 0.96); box-shadow: none; width: 400px; position: relative; display: flex; align-items: center; gap: 5px; pointer-events: auto; transition: box-shadow 220ms ease, background 220ms ease; min-height: 60px; border-radius: 999px; padding: 6px 8px 6px 20px; overflow: hidden;"
      >
        <div
          style="position: absolute; left: 26px; top: 50%; transform: translateY(-50%); right: 190px; display: flex; align-items: center; gap: 8px; flex-wrap: nowrap; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; opacity: 1; font-size: 16px; line-height: 1.3; color: rgba(0, 0, 0, 0.5); transition: opacity 260ms ease, color 300ms ease; pointer-events: none;"
        >
          Ask Netdata
          <span
            style="margin-left: 10px; font-size: 12px; font-weight: 600; letter-spacing: .5px; padding: 2px 6px; border-radius: 4px; display: inline-block; white-space: nowrap; min-width: 44px; text-align: center; background: rgba(0, 0, 0, 0.06); color: rgba(0, 0, 0, 0.6); line-height: 1; user-select: none;"
            title="Focus input"
          >
            Ctrl + K
          </span>
        </div>
        <textarea
          placeholder=""
          rows="1"
          style="flex: 1 1 0%; background: transparent; border: medium; outline: none; resize: none; font-size: 16px; font-family: inherit; line-height: 1.45; color: rgb(31, 41, 55); padding: 0px; max-height: 200px; overflow: hidden; height: 0px;"
        />
        <div
          aria-checked="false"
          role="switch"
          style="width: 98px; height: 61px; padding: 4px; box-sizing: border-box; border-radius: 999px; background: rgb(14, 182, 240); position: relative; cursor: pointer; transition: background 200ms ease; flex-shrink: 0; display: flex; align-items: center;"
          tabindex="0"
          title="Toggle search / chat"
        >
          <div
            style="position: absolute; top: 50%; left: auto; right: 10px; transform: translateY(-50%); font-size: 12px; font-weight: 600; letter-spacing: .4px; color: rgb(255, 255, 255); user-select: none; pointer-events: none;"
          >
            <span
              style="font-size: 11px; font-weight: 600; letter-spacing: .5px; padding: 3px 7px; border-radius: 6px; background: rgba(255, 255, 255, 0.25); color: rgb(255, 255, 255); line-height: 1; user-select: none; display: inline-block;"
            >
              Ctrl + /
            </span>
          </div>
          <div
            style="width: 48px; height: 48px; border-radius: 50%; background: rgb(255, 255, 255); position: absolute; top: 50%; left: 4px; transform: translateY(-50%); transition: left 200ms cubic-bezier(.2,.9,.2,1);"
          />
        </div>
        <button
          style="background: rgba(14, 182, 240, 0.28); color: rgb(255, 255, 255); border: medium; border-radius: 50%; width: 60px; height: 60px; cursor: pointer; display: flex; align-items: center; justify-content: center; box-shadow: none; transition: background 200ms ease, box-shadow 200ms ease;"
          type="button"
        >
          <svg
            fill="currentColor"
            height="16"
            viewBox="0 0 20 20"
            width="16"
          >
            <path
              d="M10.894 2.553a1 1 0 00-1.788 0l-7 14a1 1 0 001.169 1.409l5-1.429A1 1 0 009 15.571V11a1 1 0 112 0v4.571a1 1 0 00.725.962l5 1.428a1 1 0 001.17-1.408l-7-14z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <div
    style="position: fixed; top: 16px; bottom: auto; right: 0px; left: auto; height: calc(100% - 16px); z-index: 1200; display: none; pointer-events: none;"
  >
    <div
      style="display: flex; height: 100%; align-items: flex-start;"
    >
      <div
        style="width: auto; max-width: 1400px; height: 100%; padding: 0px; box-sizing: border-box; pointer-events: auto; display: flex; flex-direction: column; align-items: flex-end;"
      >
        <div
          class="asknet-overlay-panel"
          style="background: rgba(255, 255, 255, 0.96); border: 1px solid rgba(16, 24, 40, 0.04); border-radius: 0; padding: 10px; box-shadow: none; max-height: 100%; scrollbar-width: none; animation: slideInFromRight 320ms cubic-bezier(0.16,1,0.3,1) forwards; position: relative; display: flex; flex-direction: column; width: 320px; height: 100%; transition: none; --asknet-resizer-bg: #0eb6f0ff; --asknet-resizer-glow: #0eb6f0ff; --asknet-resizer-border: #0eb6f0ff; --asknet-glow-strong: rgba(14,182,240,0.32); --asknet-glow-soft: rgba(14,182,240,0.16); --asknet-focus-ring: rgba(14,182,240,0.35);"
        >
          <div
            aria-orientation="vertical"
            role="separator"
            style="position: absolute; left: -10px; top: 0px; bottom: 0px; width: 20px; cursor: ew-resize; display: flex; align-items: center; justify-content: center; z-index: 1300;"
          >
            <div
              class="asknet-resizer "
              style="width: 8px; height: 100%; display: block; box-sizing: border-box; border-radius: 0; background: transparent; border-left: 1px solid transparent; transition: width 120ms ease, background 120ms ease;"
            />
          </div>
          <div
            style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 24px;"
          >
            <div
              style="font-size: 15px; font-weight: 600;"
            />
            <div
              style="display: flex; gap: 12px;"
            >
              <button
                aria-label="Close overlay"
                style="background: transparent; border: medium; font-size: 18px; cursor: pointer; line-height: 1; padding: 4px 6px;"
              >
                ×
              </button>
            </div>
          </div>
          <div
            style="flex: 1 1 0%; overflow-y: auto; padding-right: 6px; padding-top: 8px;"
          >
            <div />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
